Fix display overflow on large numbers; Add styling
Increase font size of buttons and adjust their padding/gap
Adjust padding and height of display elements
Add subtle text shadows

--- a/styles.css
+++ b/styles.css
@@ -85,11 +85,11 @@ h1 > p{
     flex-direction: column;
     border: 1px solid rgb(17, 16, 16);
     border-radius: 10px;
-    background-color: rgb(167, 167, 167);
+    background-color: rgb(156, 155, 155);
     width: 22em;
     height: 30em;
     padding: 10px;
-    gap: 4px;
+    gap: 8px;
     box-shadow: 0px 0px 2px 2px rgba(104, 93, 136, 0.88),
                 0px 0px 4px 4px rgba(161, 135, 135, 0.92),
                 0px 0px 6px 5px rgba(214, 78, 15, 0.863);
@@ -97,47 +97,53 @@ h1 > p{
 
 .displaycontainer {
     text-align: end;
-    border: 1px solid rgb(17, 16, 16); 
-    min-height: 4em;
+    border: 1px solid rgb(17, 16, 16);
+    height: 5em; 
     background: radial-gradient(rgb(236, 232, 221, 0.88) 88%, rgb(207, 204, 195));
-    border-radius: 2px;
+    border-radius: 3px;
+    color: rgba(27, 26, 24, 0.966);
 }
 
 .eqndisplay {
-    height: 1em;
+    height: 1.5em;
     font-size: 1em;
     font-family: 'Battambang', cursive;
     font-weight: 400;
-    padding: 1px 5px;
+    padding: 5px 5px 0px;
 }
 
 .display {
-    font-size: 2.4rem;
+    display: inline-block;
+    height: 1.5em;
+    font-size: 2.4em;
     padding: 0px 5px;
     font-family: 'Battambang', cursive;
     font-weight: 400;
+    text-shadow: 1px 1px 2px rgba(7, 7, 7, 0.096);
 }
 
-.btnrow {
+.btnrow, .clearrow {
     display: flex;
     justify-content: space-evenly;
     flex-grow: 1;
-    gap: 2px;
 }
 
-.clearrow {
-    display: flex;
-    justify-content: space-evenly;
-    flex-grow: 1;
-    gap: 2px;
+.buttons, .btnrow, .clearrow {
+    gap: 5px;
+}
+
+.buttons div button {
+    font-size: 1.6em;
+    text-shadow: 1px 1px rgba(8, 8, 8, 0.027);
+    user-select: none;
 }
 
 button {
-    flex-basis: 25%;
+    flex-basis: 24%;
     min-height: 100%;
-    border-radius: 4px;
-    font-family: 'Battambang', cursive;
-    font-weight: 400;
+    border-radius: 6px;
+    border-color: rgb(99, 99, 99);
+    padding: 0;
 }
 
 button:focus-visible {
@@ -149,13 +155,16 @@ button:focus-visible {
     flex-direction: column;
     flex-grow: 1;
     justify-content: space-evenly;
-    gap: 3px;
 }
 
 .digit {
-    background-color: rgb(211, 211, 211);
+    background-color: rgb(230, 230, 230);
 }
 
-.operator, .decimal, .clear, .equals, .backspace, .clearEntry, .negate {
-    background-color: rgb(230, 230, 230);
+.operator, .decimal, .clear, .backspace, .clearEntry, .negate {
+    background-color: rgb(211, 211, 211);
+    }
+
+.equals {
+    background-color: rgb(222, 222, 222);
 }
